--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WASudoku</title>
+
+  <meta name="description" content="A Sudoku solver that runs locally in your browser using WebAssembly." />
+  <link rel="manifest" href="/manifest.json" />
+
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff" />
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#141414" />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="WASudoku" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="WASudoku" />
+  <meta property="og:url" content="https://h3nc4.com/WASudoku/" />
+  <meta property="og:title" content="WASudoku" />
+  <meta property="og:description" content="A Sudoku solver that runs locally in your browser using WebAssembly." />
+  <meta property="og:image" content="https://h3nc4.com/WASudoku/wasudoku-preview.png" />
+  <meta property="og:image:secure_url" content="https://h3nc4.com/WASudoku/wasudoku-preview.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="1200" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://h3nc4.com/WASudoku/" />
+  <meta property="twitter:title" content="WASudoku" />
+  <meta property="twitter:description" content="A Sudoku solver that runs locally in your browser using WebAssembly." />
+  <meta property="twitter:image" content="https://h3nc4.com/WASudoku/wasudoku-preview.png" />
 </head>
 
 <body>
